Change vector impl to Arrow due to JDK compatibility requirement by JDK Vector
Signed-off-by: Chen Dai <daichen@amazon.com>